--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
     <copy
         todir="war/WEB-INF/lib"
         flatten="true">
-      <fileset dir="jars">
+      <fileset dir="java/jars">
         <include name="**/*.jar" />
       </fileset>
     </copy>
@@ -36,15 +36,22 @@
       description="Compiles Java source and copies other source files to the WAR.">
     <mkdir dir="war/WEB-INF/classes" />
     <copy todir="war/WEB-INF/classes">
-      <fileset dir="src">
+      <fileset dir="java/src">
         <exclude name="**/*.java" />
       </fileset>
     </copy>
     <javac
-        srcdir="src"
-        destdir="war/WEB-INF/classes"
-        classpathref="project.classpath"
-        debug="on" />
+      includeantruntime="false"
+      srcdir="java/src"
+      destdir="war/WEB-INF/classes"
+      classpathref="project.classpath"
+      debug="on" />
+    <copy todir="war/WEB-INF/classes/glasspages">
+      <fileset file="war/WEB-INF/js/PageServlet.js" />
+    </copy>
+    <jar
+      destfile="dist/glasspages.jar"
+      basedir="war/WEB-INF/classes"/>
   </target>
 
   <target name="runserver" depends="compile"
