--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "readmeFilename": "readme.md",
   "dependencies": {
     "glass-build": "0.3.x",
-    "sugar": "1.3.8"
+    "sugar": "1.3.x",
+    "coffeebars": "0.2.x"
   }
 }
