--- a/lib/server/package.json
+++ b/lib/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "glass-build": "0.3.x",
     "sugar": "1.3.x",
+    "glass-test": "0.0.x",
     "coffeebars": "0.2.x"
   }
 }
