--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
-war/js
-war/WEB-INF/js
-war/WEB-INF/classes
-war/WEB-INF/lib
-war/WEB-INF/pages
+build.js
+www/WEB-INF/js
+www/WEB-INF/classes
+www/WEB-INF/lib
+www/WEB-INF/pages
