no longer error on file not found

--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
        value of appengine.sdk accordingly.  You may also want to use Ant's
        property file feature, allowing each developer to have their own
        local property file with the path to the SDK from that workspace. -->
-  <property name="appengine.sdk" location="../appengine-java-sdk-1.8.8"/>
+  <property name="appengine.sdk" location="/usr/local/Cellar/app-engine-java-sdk/1.9.15/libexec"/>
 
   <!-- Check that the SDK value is set and seems sane, so we can give a nicer
        error if not.  -->
